src2/objects/IoT_Audit_Log__c.object
<CustomObject>
    <description>The messages sent by the machines via IoT</description>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <description>Created Date/Time</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Created Date/Time</inlineHelpText>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <description>Full JSON content of the message</description>
        <label>JSON</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MID__c</fullName>
        <description>Serial number of the chassis of the machine that sent the message</description>
        <label>MID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Size__c</fullName>
        <label>Message Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>AWS unique identifier</description>
        <label>UUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>IoT Audit Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Created_DateTime__c</columns>
        <columns>MID__c</columns>
        <columns>UUID__c</columns>
        <columns>Message_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>IoT Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IoT Audit Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>